samples/_failures_safe/1761085767_d026df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99a04d7b.c: In function ‘main’:
./samples/SAFE/__tmp_99a04d7b.c:160:5: error: expected declaration or statement at end of input
  160 |     printf("Enter elements for matrix A (%d x %d):\n", rows1, cols1);
      |     ^~~~~~
